--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.14.2",
     "axios": "^1.6.7",
     "firebase": "^10.8.0",
+    "framer-motion": "^11.0.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
