--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.14.2",
     "axios": "^1.6.7",
+    "countrycitystatejson": "^21.3.2702",
+    "device-detector-js": "^3.0.3",
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.25",
+    "geoip-country": "^4.2.87",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
