--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.25",
     "geoip-country": "^4.2.87",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
