--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.25",
     "geoip-country": "^4.2.87",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
@@ -22,8 +23,10 @@
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.15.1",
     "sweetalert2": "^11.10.5",
     "web-vitals": "^2.1.4"
   },
