--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.14.2",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "countrycitystatejson": "^21.3.2702",
     "device-detector-js": "^3.0.3",
     "firebase": "^10.8.0",
@@ -18,6 +19,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
@@ -27,6 +29,7 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.15.1",
+    "recharts": "^2.12.5",
     "sweetalert2": "^11.10.5",
     "web-vitals": "^2.1.4"
   },
