--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.0.25",
     "geoip-country": "^4.2.87",
     "html2canvas": "^1.4.1",
+    "is-url": "^1.2.4",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
